[DESIGN] Cleanup some responsive issues on tablet tracker

--- a/lesscss/improved-initiative.less
+++ b/lesscss/improved-initiative.less
@@ -33,6 +33,13 @@
 @font-size-body: 1rem;
 @font-size-small: 0.875rem;
 @font-size-mice: 0.75rem;
+
+// Breakpoints
+
+@large: 1200px;
+@medium: 900px;
+@small: 650px;
+
 //elements
 *,
 ::after,
